--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,7 @@
     <title>Component wall</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div style="height: 100%" id="app"></div>
     <script type="module" src="index.js"></script>
   </body>
 </html>
